# trumpbot

./: README.md  main.py  pyproject.toml
digest_bot/: README.md  digest.py
src/: config.py  test.ipynb
src/analysis/: base.py  llm_clients.py  parse_output.py
src/broker/: client.py  scheduler.py  trade_executor.py
src/database/: crud.py  db.py  models.py
src/news/: __init__.py  fetcher.py  scheduler.py  summarizer.py
src/scraper/: scraper.py
src/scripts/: main_loop.py  startup.py
tests/: test_analysis.py  test_database.py  test_news_fetcher.py  test_query_factory.py
