[project]
name = "trumpbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.2",
    "anthropic>=0.96.0",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
[tool.setuptools.packages.find]
where = ["src"]
